[package]
name = "gd32-synopsys-usb-otg"
version = "0.4.1"
authors = ["Vadim Kaushan <admin@disasm.info>"]
description = "'usb-device' implementation for Synopsys USB OTG IP cores -- gd32 workaround"
edition = "2018"
license = "MIT"
repository = "https://github.com/guineawheek/gd32-synopsys-usb-otg"
readme = "README.md"
keywords = ["no-std", "embedded", "usb", "gd32"]

[dependencies]
critical-section = "1.0"
embedded-hal = "0.2.4"
vcell = "0.1.0"
usb-device = "0.3"
ral-registers = "0.1.3"

[package.metadata.docs.rs]
features = ['fs']

[features]
hs = []
fs = []
xcvrdly = []
